ZezeJava: 更新版本号: 1.4.12; 修正一些doc警告; 改进pom可发布到maven中央库